--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container-fluid {
+  max-width: 1200px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar {
+  background-color: #000080;
 }
 
-.App-header {
-  background-color: #282c34;
+.navbar-brand b {
+  color: #FF5C5C;
+}
+
+.navbar-brand i {
+  color: #32CD32;
+}
+
+.navbar-brand h2:hover {
+  opacity: 0.5;
+}
+
+footer a:hover {
+  color: gray;
+  text-decoration: underline;
+}
+
+.shadow-box {
+  min-height: 200px;
+}
+
+select {
+  border: lightgray 2px solid;
+  font-size: 25px;
+  width: 200px;
+  min-height: 50px;
+  border-radius: 10px;
+}
+
+input {
+  font-size: 25px;
+  height: 50px;
+  width: 200px;
+  background-color: lightgray;
+  border-color: transparent;
+  border-bottom: 2px gray solid;
+}
+
+
+.inputs span {
+  margin: 50px;
+  font-size: 25px;
+}
+
+table {
+  font-size: 20px;
+}
+
+tr:last-child {
+  border-top: transparent;
+}
+
+body {
+  position: relative;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.content-wrap {
+  padding-bottom: 50px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: #000080;
 }
